@@ -1,17 +1,18 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version "${springBootVersion}"
-	id 'io.spring.dependency-management' version '1.1.5'
-	id 'org.hibernate.orm' version '6.5.2.Final'
-	id 'org.graalvm.buildtools.native' version '0.10.2'
+	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
+	id 'org.hibernate.orm' version "${hibernateVersion}"
+	id 'org.graalvm.buildtools.native' version "${graalvmBuildtoolsVersion}"
 }
 
 group = 'io.github.kprasad99'
 version = '1.0.0-SNAPSHOT'
+description = 'Backend Application for Employee Portal'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(25)
 	}
 }
 
@@ -26,37 +27,45 @@ repositories {
 }
 
 dependencies {
-	  implementation 'org.springframework.boot:spring-boot-starter-actuator'
-  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-  implementation 'org.springframework.boot:spring-boot-starter-webflux'
-  implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-  implementation 'org.flywaydb:flyway-core'
-  implementation 'org.flywaydb:flyway-database-postgresql'
-  compileOnly 'org.projectlombok:lombok'
-  developmentOnly 'org.springframework.boot:spring-boot-devtools'
-  runtimeOnly 'com.h2database:h2'
-  runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-  runtimeOnly 'org.postgresql:postgresql'
-  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-  annotationProcessor 'org.projectlombok:lombok'
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
-  testImplementation 'io.projectreactor:reactor-test'
-  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+  runtimeOnly "io.netty:netty-transport-native-epoll:${nettyNativeVersion}:linux-x86_64"
+	implementation 'org.springframework.boot:spring-boot-micrometer-tracing'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-flyway'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+	implementation 'org.flywaydb:flyway-database-postgresql'
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly 'org.postgresql:postgresql'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-micrometer-tracing-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 hibernate {
-  enhancement {
-    enableAssociationManagement = true
-  }
+	enhancement {
+		enableAssociationManagement = true
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
-
 bootRun {
     systemProperties = System.properties
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 bootJar {
